--- a/index.html
+++ b/index.html
@@ -22,44 +22,42 @@
 	<script src="assets/js/script.js"></script>
 </head>
 <body>
-	<section class="jumbotron text-center">
+	<section class="jumbotron text-center header">
 		<h1>Eres extranjero con residencia en Chile?<br>
-		Quieres retirar tus fondos AFP cotizados durante tu estadìa en Chile pero no sabes cómo hacerlo?</h1>
+		Quieres retirar tus fondos AFP cotizados pero <br> no sabes cómo hacerlo?</h1>
 		<h2>Te ayudamos!</h2>
 	</section>
-	<section class="container">
+	<section class="jumbotron servicios">
 		<div class="row">
-			<div class="col-md-6">
-				<div>
-					
+			<div class="text-center servicios__title">
+				<h3>Que ofrecemos?</h3>
+			</div>
+			<div class="col-md-6 text-center servicios__content">
+				<div class="servicios__content--icons">
+					<i class="fas fa-coffee"></i>
 				</div>
-				<div>
-					<h3>Sesión de Información</h3>
+				<div class="servicios__content--details">
+					<h4>Sesión de Información</h4>
 					<p>Vamos a tu casa, tu oficina o donde mejor te acomode y te entregamos la información necesario para completar tu trámite de retiro de fondos AFP por tu cuenta.</p>
 				</div>
 			</div>
-			<div class="col-md-6">
-				<div>
-					
+			<div class="col-md-6 text-center servicios__content">
+				<div class="servicios__content--icons">
+					<i class="fas fa-user-tie"></i>
 				</div>
-				<div>
-					<h3>Nos encargamos de tus trámites en Chile</h3>
+				<div class="servicios__content--details">
+					<h4>Nos encargamos de tus trámites en Chile</h4>
 					<p>Quieres retirar tus fondos pero no tienes tiempo de encargarte de los largos trámites? <br>
 					No te procupes, contáctanos y nos encargamos de todo por ti!</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="jumbotron">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	<section class="jumbotron text-center contacto">
+		
 	</section>
-	<section class="jumbotron">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+	<section class="jumbotron footer text-center">
+		<p>Email: info@kimiaconsulting.com || Teléfono: +56 9 5016 2075</p>
 	</section>
 </body>
 </html>
